--- a/SmartTilesServer/src/CMakeLists.txt
+++ b/SmartTilesServer/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
+ADD_DEFINITIONS( -std=c++11 )
+
 PROJECT(SmartTilesQt)
 FIND_PACKAGE(Qt4 REQUIRED)
 SET(QT_USE_QTOPENGL TRUE)
@@ -18,3 +20,5 @@ ADD_EXECUTABLE(smart-tiles-qt ${SmartTilesQt_SOURCES} ${SmartTilesQt_HEADERS_MOC
 SET_TARGET_PROPERTIES(smart-tiles-qt PROPERTIES COMPILE_DEFINITIONS "QT_OPENGL_ES_2")
 
 TARGET_LINK_LIBRARIES(smart-tiles-qt ${QT_LIBRARIES} GLESv2)
+
+ADD_EXECUTABLE(smart-tiles-server server/Server.cpp server/main.cpp)
